--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
-    "name": "hotel",
-    "version": "0.0.1",
-    "description": "Servidor node para testes com a aplicação Qualiom hotel.",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "author": "Qualiom Sistemas",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.1.2",
-        "body-parser": "^1.1.2",
-        "errorhandler": "^1.0.1",
-        "method-override": "^1.0.0",
-        "bower": "~1.2.6",
-        "karma-script-launcher": "~0.1.0",
-        "karma-firefox-launcher": "~0.1.0",
-        "karma-chrome-launcher": "~0.1.0",
-        "karma-html2js-preprocessor": "~0.1.0",
-        "karma-jasmine": "~0.1.3",
-        "karma-requirejs": "~0.1.0",
-        "karma-coffee-preprocessor": "~0.1.0",
-        "karma-phantomjs-launcher": "~0.1.0",
-        "karma-coverage": "~0.1.0",
-        "karma": "~0.10.2"
-    }
+  "name": "hotel",
+  "version": "0.0.1",
+  "description": "Servidor node para testes com a aplicação Qualiom hotel.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "Qualiom Sistemas",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.1.2",
+    "body-parser": "^1.1.2",
+    "errorhandler": "^1.0.1",
+    "method-override": "^1.0.0",
+    "bower": "~1.2.6",
+    "karma-script-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-requirejs": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-coverage": "~0.1.0",
+    "karma": "~0.10.2"
+  },
+  "devDependencies": {
+    "karma": "^0.10.10",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-coffee-preprocessor": "^0.1.3",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-html2js-preprocessor": "^0.1.0",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-script-launcher": "^0.1.0",
+    "requirejs": "^2.1.15"
+  }
 }
